# winut

./: .gitignore  CMakeLists.txt  download_dependencies.py
include/winut/: errors.hpp  process.hpp  utils.hpp  winapi_exception.hpp  winut.hpp
src/: errors.cpp  process.cpp  utils.cpp  winapi_exception.cpp
